# Momentum_Following_Strategy

./: README.md  SECURITY.md  app.py  momentum_strategy.py  pyproject.toml  requirements.txt  run_backtest.py
momentum_strategy/: __init__.py  ai.py  backtest.py  cli.py  config.py  data.py  evaluation.py  logging_utils.py  realtime.py  report.py  signals.py  strategy.py
tests/: test_signals.py
