[project]
name = "momentum-strategy"
version = "0.2.0"
description = "Momentum strategy research lab with backtesting and optimizer."
readme = "README.md"
requires-python = ">=3.9"

authors = [{name = "Your Name"}]

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

